# btmsp2table

./: README.md  pyproject.toml
6c/8af16c8fb1/: metadata.json
6c/8af16c8fb1/0/: context.md  full.jsonl  metadata.json  prompt.txt  summary.txt
examples/: EMALiMB_NBRP_Library_ver3.0_Protozoa.btmsp
src/btmsp2table/: __init__.py  btmsp2table.py
tests/: __init__.py  test_btmsp2table.py
