[project]
name = "btmsp2table"
version = "0.1.0"
description = "Extract main spectrum table from Bruker's MALDI Biotyper .btmsp file"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
btmsp2table = "btmsp2table:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
